<resources>
    <string name="app_name">CS Android Assignment</string>
    <string name="data_error">Data Error : There is no data to show</string>
    <string name="server_error">Server Error : Could not retrieve data from servers</string>
    <string name="movie_box_logo">Movie box logo</string>
    <string name="playing_now">Playing now</string>
    <string name="playing_now_movie">playing now movie</string>
    <string name="empty_error">There is no data to show</string>
    <string name="most_popular">Most popular</string>
    <string name="movie_poster">movie poster</string>
    <string name="movie_key">movieId</string>
    <string name="back_button">back button</string>
    <string name="overview">Overview</string>
</resources>
